# mkdocs-docs-template

./: LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-pages.yml
docs/en/: index.md
docs/en/developer-docs/: index.md  typescript.md
docs/en/user-docs/: index.md
docs/ja/: index.md
docs/ja/developer-docs/: index.md  typescript.md
docs/ja/user-docs/: index.md
