[project]
name = "mkdocs-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.29",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "cairosvg>=2.7.1",
    "mkdocs-static-i18n>=1.2.0",
]
